# python-infra

./: .gitignore  LICENSE  README.md
UniversalAnalyticsTracking/: README.md  setup.cfg
UniversalAnalyticsTracking/src/UniversalAnalyticsTracking/: tracking.py
