[metadata]
name = UniversalAnalyticsTracking
version = 0.1
author = Simon Bruno
author_email = simon@otomato.io
description = Google Analytics tracking integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Spiroman/python-infra
project_urls =
    Bug Tracker = https://github.com/Spiroman/python-infra/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
